use import static on collections